# cicd_rust

./: Cargo.toml  README.md
.github/: DOCS.md  codecov.yml  dependabot.yml
.github/workflows/: check.yml
tests/: via-cargo.rs
